// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ld-header renders 1`] = `
<ld-header class="ld-header" role="banner">
  <mock:shadow-root>
    <header class="ld-header__container" part="container">
      <slot></slot>
    </header>
  </mock:shadow-root>
</ld-header>
`;

exports[`ld-header renders hidden 1`] = `
<ld-header class="ld-header ld-header--hidden ld-header--sticky" hidden="" role="banner" sticky="">
  <mock:shadow-root>
    <header class="ld-header__container" part="container">
      <slot></slot>
    </header>
  </mock:shadow-root>
</ld-header>
`;

exports[`ld-header renders hide-on-scroll 1`] = `
<ld-header class="ld-header ld-header--sticky" hide-on-scroll="" role="banner" sticky="">
  <mock:shadow-root>
    <header class="ld-header__container" part="container">
      <slot></slot>
    </header>
  </mock:shadow-root>
</ld-header>
`;

exports[`ld-header renders sticky 1`] = `
<ld-header class="ld-header ld-header--sticky" role="banner" sticky="">
  <mock:shadow-root>
    <header class="ld-header__container" part="container">
      <slot></slot>
    </header>
  </mock:shadow-root>
</ld-header>
`;

exports[`ld-header renders with content 1`] = `
<ld-header class="ld-header" role="banner">
  <mock:shadow-root>
    <header class="ld-header__container" part="container">
      <slot></slot>
    </header>
  </mock:shadow-root>
  <ld-typo>
    Liquid Oxygen
  </ld-typo>
</ld-header>
`;
